@@ -8,3 +8,4 @@ ggplot2 0.8.3  (2008-XX-XX)
 * stat_summary: now warns when dropping records with missing values
 * scale_manual: breaks and limits 
 * scale_discrete: factor levels no longer mistakenly reordered
+* American spelling of color accepted in more places
